adaptation to the new website structure